<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">Pet Shout</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_found_pet">Found a Pet</string>
    <string name="nav_browse">Browse Lost Pets</string>
    <string name="nav_steps">Lost or Found a Pet?</string>
    <string name="nav_edit_pp">Edit Pet Profile</string>
    <string name="nav_create_lpp">Create Lost Pet Profile</string>
    <string name="nav_claim_pet">Claim Lost Pet</string>
    <string name="nav_edit_account">Edit Account</string>
    <string name="nav_edit_lpp">Edit Lost Pet Profile</string>
    <string name="admin_title">Admin</string>
    <string name="nav_login">Login</string>
    <string name="nav_register">Register</string>
    <string name="first_name_input">First Name</string>
    <string name="last_name_input">Last Name</string>
    <string name="city_input">City</string>
    <string name="postal_code_input">Postal Code</string>
    <string name="email_address_input">Email</string>
    <string name="phone_number_input">Phone Number</string>
    <string name="password_input">Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="confirm_password_input">Password</string>
    <string name="lost_a_pet">Lost a Pet?</string>
    <string name="lost_first_paragraph">Losing a pets is a traumatic experience for you, your family
        and your pets. The following are some tips for finding your lost pets.
    </string>
    <string name="search_your_neighborhood">Walk or drive through your neighbourhood as often as you
        can. Ask neighbors and anyone who works in the area. Have a picture
        and let people know to be on the lookout.
    </string>
    <string name="add_to_registry">If your pets has a permanent ID, register the information in any
        local pets registries (SPCA database if available). Use any online resources available.
    </string>
    <string name="put_up_posters">Place posters around the area your pets was lost. Use eye catching
        colors to help gain attention, make sure to include contact information.
    </string>
    <string name="visit_animal_shelters">Go to local animal shelters at least once a day, with a
        photo of your pets. Visiting is better than phoning as often shelter workers are very busy,
        and can\'t respond to phone calls.
    </string>
    <string name="check_animal_control">Check with your local Animal Control.</string>
    <string name="check_animal_hospitals">If your pets was injured, it is possible it may have been
        taken to a local Animal Hospital or Vet.
    </string>
    <string name="persistence_is_key">Keep searching even if hope seems slim. Pets have been
        reunited with their guardians long after the have gone missing.
    </string>
    <string name="prevention">If your pets does not have a permanent form of ID, get one now before
        it is too late!
    </string>
    <string name="found_a_pet">Found a Pet?</string>
    <string name="found_first_paragraph">Being lost can be a very stressful event for both a pets
        and
        their guardians. If you have found an animal that you feel has been lost,
        trying to find the animal\'s home before the local SPCA or Animal Control is called. Most
        pets are found within the neighborhood where they are lost, and guardians are more than
        likely already searching for them.
    </string>
    <string name="found_paragraph_two">If you must bring the animal to a local Animal Shelter, keep
        in mind that moving the animal from the neighbourhood reduces the chances that the pets will
        be
        reunited with his/her guardian. The shelter is a very traumatic experience for the animal,
        so if you are able, take some time to find the guardian on your own.
    </string>
    <string name="look_for_id">Look for identification</string>
    <string name="collar_or_id">Collar or ID tag</string>
    <string name="collar_paragraph">Is there a collar with a tag? If so, is there a phone number, or
        an address. Is there a municipal ID tag? A municipal tag can be used to locate the guardian
        through the local animal control office or SPCA.
    </string>
    <string name="ear_tattoo">Ear Tattoo</string>
    <string name="ear_tattoo_paragraph">If the animal you found has an ear tattoo, it is possible
        that it could be used to help track down the guardian of the animal. Check with your local
        veterinary office
        to see if it is possible. Some animals may have tattoos on other areas of their body, such
        as their abdomen or inside leg. These are breeder tattoos and usually can only be traced to
        the original
        breeder.
    </string>
    <string name="microchip">Microchip</string>
    <string name="microchip_paragraph">Many pets have microchips, but the only way to know for sure
        is to take the animal to a local veterinary clinic, Animal Control service or SPCA shelter.
    </string>
    <string name="animals_with_no_id">Animals with no ID</string>
    <string name="animals_with_no_id_paragraph">Use the internet. There are many sites dedicated to
        helping reunite lost pets with with their guardians. Put up found pets posters with a
        description and
        talk to people in the neighbourhood. Contact your local SPCA shelter or Animal Control to
        report the animal and let them know if you are willing to hold the animal until the guardian
        is located.
    </string>
    <string name="contact_vet">Contact local veterinary clinics, many of them keep lost and found
        records. Check the local classifieds. Don\'t forget, if the guardian is located, please
        remember to contact groups
        you have previously contacted to update them.
    </string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="cat_and_dog_profile">cat and dog profile picture</string>
    <string name="passwords_not_matched">Passwords do not match</string>
    <string name="passwords_matched">Passwords Match</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_button">Update</string>
    <string name="name">Name</string>
    <string name="edit_account_title">Edit Account</string>
    <string name="register_account_header">Register</string>
    <string name="main_welcome_header">Welcome to Pet Shout</string>
    <string name="welcome_account_header">Welcome</string>
    <string name="account_home_welcome_text">Please chose an option from the side menu or choose
        below.
    </string>
    <string name="edit_pet_profile_button">Edit Pet Profile</string>
    <string name="delete_pet_profile_button">Delete Pet Profile</string>
    <string name="add_pet_profile_button">Add Pet Profile</string>
    <string name="post_lost_pet_button">Post Lost Pet</string>
    <string name="browse_lost_pets_button">Browse Lost Pets</string>
    <string name="claim_lost_pet_button">Claim Lost Pet</string>
    <string name="login_header">Login</string>
    <string name="or_text">or</string>
    <string name="browse_lost_and_found_pets_header">Browse Lost and Found Pets</string>
    <string name="gender_radio_title">Gender</string>
    <string name="keywords_input">Keywords</string>
    <string name="search_button">Search</string>
    <string name="update_lost_pet_post_header">Update Lost Pet Post for</string>
    <string name="existing_pet_post_text_to_update">Existing Text to Update</string>
    <string name="submit_button">Submit</string>
    <string name="submit_disclaimer">By clicking Submit you acknowledge that you are publishing your
        contact information, which may result in you receiving unwanted messages.
    </string>
    <string name="create_lost_pet_post_header">Create Lost Pet Post for</string>
    <string name="update_lost_pet_post">Update Lost Pet Post for</string>
    <string name="update_disclaimer">By clicking Update you acknowledge that you are publishing your
        contact information, which may result in you receiving unwanted messages.
    </string>
    <string name="claim_lost_pet_header">Claim Lost Pet</string>
    <string name="claim_pet_button">This is my pets!</string>
    <string name="pet_description">Pet Description</string>
    <string name="additional_information">Additional Information</string>
    <string name="pet_found_in">Pet found in</string>
    <string name="region_area">region and area</string>
    <string name="contact_information_person_found_pet">Contact info for person that found pets
        revealed after claim pets pushed
    </string>
    <string name="this_is_my_pet_button">This is my pets</string>
    <string name="report_found_pet_header">Report a Found Pet</string>
    <string name="email_title">Email</string>
    <string name="phone_title">Phone</string>
    <string name="breed_title">Breed</string>
    <string name="image_button_text">Add Image</string>
    <string name="location_header">Location</string>
    <string name="female_text">Female</string>
    <string name="male_text">Male</string>
    <string name="gender_header">Gender</string>
    <string name="select_species_title">Select Species</string>
    <string name="pet_profile_header">Pet Profile</string>
    <string name="age_header">Age</string>
    <string name="spayed_neutered">Spayed/Neutered</string>
    <string name="description_coloring">Description and Coloring</string>
    <string name="lost_found_both_title">Lost, Found, or Both?</string>
    <string name="area_pet_found_in_title">Area Pet Found In</string>
    <string name="select_pet_profile_title">Select Pet Profile</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="bird">Bird</string>
    <string name="rat">Rat</string>
    <string name="hedgehog">HedgeHog</string>
    <string name="pig">Pig</string>
    <string name="horse">Horse</string>
    <string name="reptile">Reptile</string>
    <string name="guinea_pig">Guinea Pig</string>
    <string name="rabbit">Rabbit</string>
    <string name="other">Other</string>
    <string name="previously_chosen_pet_profile">Previously Chosen Pet Profile</string>
    <string name="incorrect_login">Email or Password incorrect</string>
    <string name="complete_all_fields">Please complete all fields and select image</string>
    <string name="reg_successful">Registration successful</string>
    <string name="pass_length">Password must be at least 8 characters and have at least 1 uppercase,
        1 lowercase, and one of @#$%
    </string>
    <string name="email_verify">Please enter a valid email address</string>
    <string name="description_title">Description</string>
    <string name="create_pet_profile_header">Create Pet Profile</string>
    <string name="pet_details_header">Pet Details</string>
    <string name="restore_password_button">Restore Password</string>
    <string name="restore_password_header">Restore Password</string>
    <string name="password_restore_toast">Please check your email for password recovery</string>
    <string name="thank_you_fragment_text">Thank you for creating a lost pet post</string>
    <string name="edit_lost_pet_post">Edit Lost Pet Post</string>
    <string name="create_pet_profile">Create Pet Profile</string>
    <string name="found_pet_additional_info">Additional Info</string>
    <string name="claim_pet_instructions">Is this your pet? If so, click the Claim Lost Pet button
        to show the email address of the person who found this pet so you can claim it.
    </string>
    <string name="nav_logout">Logout</string>
    <string name="save_image_button">Save Image</string>
</resources>