<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.codeitonce.petshout.LostFoundPetFragment"
                android:background="#22190e">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cat_dog_profile"
        android:src="@drawable/catanddog"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/cat_and_dog_profile"
        android:padding="10dp"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cat_dog_profile"
        android:id="@+id/scrollView">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lost_a_pet"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:paddingLeft="6dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/lost_first_paragraph"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/search_your_neighborhood"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/add_to_registry"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/put_up_posters"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/visit_animal_shelters"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/check_animal_hospitals"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/persistence_is_key"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/prevention"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/found_a_pet"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:paddingLeft="6dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/found_first_paragraph"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/found_paragraph_two"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/look_for_id"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/collar_or_id"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/prevention"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/collar_paragraph"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/ear_tattoo"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/ear_tattoo_paragraph"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/microchip"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/microchip_paragraph"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/animals_with_no_id"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/animals_with_no_id_paragraph"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/contact_vet"
                    android:textColor="@color/colorAccent"
                    android:paddingTop="10dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"/>
            </TableRow>

        </TableLayout>
    </ScrollView>
</RelativeLayout>
