<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.codeitonce.petshout.LoginFragment"
             android:background="#22190e">>

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_header"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:paddingLeft="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/loginText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_button"
        android:id="@+id/textView"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@id/loginText"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#5a4e3f"
        android:textColor="#ffffff"
        android:inputType="textEmailAddress"
        android:text="@string/email_address_input"
        android:ems="10"
        android:id="@+id/emailAddressInput"
        android:paddingLeft="5dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#5a4e3f"
        android:textColor="#ffffff"
        android:inputType="textPassword"
        android:text="@string/password_input"
        android:ems="10"
        android:id="@+id/passwordInput"
        android:paddingLeft="5dp"
        android:layout_below="@+id/emailAddressInput"
        android:layout_alignLeft="@+id/emailAddressInput"
        android:layout_alignStart="@+id/emailAddressInput"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/submitButton"
        android:textColor="#21190e"
        android:background="#e89e1a"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/or_text"
        android:id="@+id/orText"
        android:textColor="#ffffff"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@+id/submitButton"
        android:layout_centerHorizontal="true"
        />

    <Button
        style="@style/ActionButton"
        android:text="@string/register_button"
        android:id="@+id/registerButton"
        android:textColor="#21190e"
        android:background="#e89e1a"
        android:layout_below="@+id/orText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>


</RelativeLayout>
