<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".RestorePasswordFragment"
                android:background="#22190e"
                android:gravity="center_horizontal">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/restore_password_header"
        android:id="@+id/text_view"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#5a4e3f"
        android:textColor="#ffffff"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address_input"
        android:ems="10"
        android:id="@+id/login_field"
        android:paddingLeft="5dp"
        android:layout_below="@+id/text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>


    <Button
        style="@style/ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restore_password_button"
        android:id="@+id/restore_password_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>


</RelativeLayout>
